<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#C56363"
        android:fontFamily="cursive"
        android:paddingVertical="60sp"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:layout_marginBottom="50dp"/>



    <Button
        android:id="@+id/googleLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button2_bg"
        android:text="Sign in with google"/>


    <Button
        android:id="@+id/btn_adminLoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_bg"
        android:text="Admin Login"
        android:onClick="goToAdminLoginPage"
        android:layout_marginBottom="30sp"/>



</LinearLayout>



